--- a/src/global-styles/styles.scss
+++ b/src/global-styles/styles.scss
@@ -11,5 +11,8 @@ html,
 body {
 	font-family: "Roboto", sans-serif;
 	font-size: 10px;
-	background: linear-gradient(189deg, #06013bfa 0%, #1a0979 35%, #00d4ff 100%);
+	background: linear-gradient(189deg, #06013bfa 0%, #1a0979 35%, #00d4ff 100%)
+		no-repeat;
+	width: 100%;
+	height: 100vh;
 }
